--- a/.github/工作流/android.yml
+++ b/.github/工作流/android.yml
@@ -23,13 +23,13 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: /gradlew assembleRelease
+      run: chmod +x gradlew &&./gradlew assembleDebug
       
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2
       with:
         name: upload-apk
         path: |
-          ${{github.workspace}}/GitBook/app/build/outputs/apk/debug/app-debug.apk
+          ${{github.workspace}}app/build/outputs/apk/debug/app-debug.apk
 
       
