--- a/.github/工作流/android.yml
+++ b/.github/工作流/android.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: chmod +x gradlew &&./gradlew assembleDebug
+      run: chmod +x gradle &&./gradle assembleDebug
       
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2
