--- a/.github/工作流/android.yml
+++ b/.github/工作流/android.yml
@@ -21,7 +21,7 @@ jobs:
         cache: gradle
 
     - name: Grant execute permission for gradlew
-      run: chmod +GitBook/gradlew
+      run: chmod +x/gradlew
     - name: Build with Gradle
       run: ./gradlew app:assembleRelease
       
