--- a/.github/工作流/android.yml
+++ b/.github/工作流/android.yml
@@ -21,15 +21,15 @@ jobs:
         cache: gradle
 
     - name: Grant execute permission for gradlew
-      run: chmod +x ./GitBook/gradlew
+      run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./GitBook/gradlew app:assembleRelease
+      run: ./gradlew app:assembleRelease
       
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2
       with:
         name: upload-apk
         path: |
-          ${{github.workspace}}GitBook/app/build/outputs/apk/debug/app-debug.apk
+          ${{github.workspace}}app/build/outputs/apk/debug/app-debug.apk
 
       
