--- a/.github/工作流/android.yml
+++ b/.github/工作流/android.yml
@@ -8,28 +8,32 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: set up JDK 11
-      uses: actions/setup-java@v3
+    - uses: actions/checkout@v2
+
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
       with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: gradle
+        java-version: 1.8
 
     - name: Grant execute permission for gradlew
-      run: chmod +x GitBook/gradlew  
+      run: chmod +x gradlew
+
     - name: Build with Gradle
-      run: ./gradlew app:assembleRelease
+      run: ./gradlew build
+
       
-    - name: Upload a Build Artifact
+    - name: Run tests with Gradle
+      run: ./gradlew test
+
+      
+    - name: Upload APK
       uses: actions/upload-artifact@v2
       with:
-        name: upload-apk
-        path: |
-          ${{github.workspace}}app/build/outputs/apk/debug/app-debug.apk
+        name: app-debug
+        path: app/build/outputs/apk/debug/app-debug.apk
+
 
       
