--- a/.github/工作流/android.yml
+++ b/.github/工作流/android.yml
@@ -19,7 +19,7 @@ jobs:
         java-version: 1.8
 
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      run: gradlew
 
     - name: Build with Gradle
       run: ./gradlew build
