--- a/.github/工作流/android.yml
+++ b/.github/工作流/android.yml
@@ -17,6 +17,12 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+        
+    - name: Change wrapper permissions
+      run: chmod +x ./GitBook/gradlew
+
+    - name: Init gradle wrapper
+      run: gradle wrapper
 
     - name: Grant execute permission for gradlew
       run: chmod +x ./GitBook/gradlew
