--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,4 +22,16 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x GitBook/gradlew
+      
+    - name: Build with Gradle
+      run: ./gradlew build
+      
+    - name: Run tests with Gradle
+      run: ./gradlew test
 
+      
+    - name: Upload APK
+      uses: actions/upload-artifact@v2
+      with:
+        name: app-debug
+        path: app/build/outputs/apk/debug/app-debug.apk
