--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,13 +21,13 @@ jobs:
         cache: gradle
 
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      run: cd ./GitBook ; chmod +x gradlew
       
     - name: Build with Gradle
-      run: ./gradlew app:assembleRelease
+      run: cd ./GitBook ;./gradlew app:assembleRelease
       
     - name: Upload APK
       uses: actions/upload-artifact@v2
       with:
         name: app-debug
-        path: app/build/outputs/apk/debug/app-debug.apk
+        path: cd ./GitBook ;app/build/outputs/apk/debug/app-debug.apk
